<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.feature.task.TaskFragment">

    <TextView
        android:id="@+id/textViewAddNewTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/task_add_new_task"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextAddNewTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/add_task_new_task_hint"
        android:backgroundTint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@id/textViewAddNewTask"
        app:layout_constraintStart_toStartOf="@id/textViewAddNewTask"
        app:layout_constraintTop_toBottomOf="@id/textViewAddNewTask" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="24dp"
        android:id="@+id/recyclerViewCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/textInputEditTextAddNewTask"
        app:layout_constraintStart_toStartOf="@id/textInputEditTextAddNewTask"
        app:layout_constraintTop_toBottomOf="@id/textInputEditTextAddNewTask"
        tools:itemCount="4"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/category_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonAddNewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:text="@string/task_new_task"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textInputEditTextAddNewTask"
        app:layout_constraintStart_toStartOf="@id/textInputEditTextAddNewTask" />


</androidx.constraintlayout.widget.ConstraintLayout>